Add post Statuses
