# internal/models/post_status.go
@@ -1,0 +1,7 @@
+package models
+
+type PostStatus struct {
+	ID    uint   `gorm:"primaryKey" json:"id" example:"1"`
+	Value string `gorm:"uniqueIndex;not null" json:"value" example:"draft"`
+	Label string `gorm:"not null" json:"label" example:"Draft"`
+}
